updates as of 2 Jun 2025. completed sbt clean, update, compile, test. also ran scalastyle in sbt terminal.